# GPU-Kernel-Redundancy

./: .gitignore  README.md
.cache/clangd/index/: A15SDOptimizer.cpp.E67F0F91EF22A0B6.idx  AArch64.cpp.716F5DFAF92491D5.idx  AArch64.cpp.BEB34B357CD554D2.idx  AArch64.def.E1E920AB76D1FC1E.idx  AArch64.h.0FA071DAC8861DBB.idx  AArch64.h.2088ED68350D0772.idx  AArch64.h.F5E22AB386C7736C.idx  AArch64A53Fix835769.cpp.C8D9C6E0319F7F38.idx  AArch64A57FPLoadBalancing.cpp.91743F91F3F1A524.idx  AArch64AddressingModes.h.F851F72E44BB75A1.idx  AArch64AdvSIMDScalarPass.cpp.68C9C5D038D9205A.idx  AArch64AsmBackend.cpp.6B9831EAB4182043.idx  AArch64AsmParser.cpp.B22750FA55696C07.idx  AArch64AsmPrinter.cpp.F45821D94B42D240.idx  AArch64BaseInfo.cpp.8A07C589B2AF8D0E.idx  AArch64BaseInfo.h.5C7C68940BCEAE05.idx  AArch64BranchTargets.cpp.DB1B5AA6F1BE742D.idx  AArch64CallLowering.cpp.1252D54A7B99123F.idx  AArch64CallLowering.h.8E731E25AA45EC83.idx  AArch64CallingConvention.cpp.2FB642C79D0CFE51.idx  (+6662 more)
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/Back2Back/: Back2Back.cpp  CMakeLists.txt
llvm/lib/Transforms/Back2BackWithStreams/: Back2BackWithStreams.cpp  CMakeLists.txt
llvm/lib/Transforms/CUDA/: CMakeLists.txt  CUDA.cpp
llvm/lib/Transforms/FTGPGPU/: CMakeLists.txt  FTGPGPUPass.cpp  MKE.cpp  SKE.cpp  common.h  main.cpp
llvm/lib/Transforms/RMT/: CMakeLists.txt  RMT.cpp
llvm/lib/Transforms/RMTY/: CMakeLists.txt  RMTY.cpp
llvm/lib/Transforms/RMTv2/: CMakeLists.txt  RMTv2.cpp
llvm/lib/Transforms/RMTv2Y/: CMakeLists.txt  RMTv2Y.cpp
llvm/lib/Transforms/skeleton/: Skeleton.cpp
(+17 files in other folders)
